[package]
name = "holochain_anchors"
version = "0.1.0"
authors = ["tomgowan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = "0.0.40-alpha1"
serde_derive = "1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
holochain_json_derive = "=0.0.15"
serde = "=1.0.89"
