[package]
name = "holochain_anchors"
version = "0.2.1"
authors = ["tomgowan"]
edition = "2018"
description = "A crate to help Holochain apps use the anchor pattern"
repository = "https://github.com/holochain/holochain_anchors"
documentation = "https://docs.rs/holochain_anchors"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = { git = "https://github.com/holochain/holochain-rust" }
serde_derive = "^1.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
holochain_json_derive = "^0.0"
serde = "^1.0"
